Fixed Docker execution

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports: 
       - "5000:5000"
     volumes:
-      - .:/app
+      - ./src:/app/src
     networks:
       - app-network
 
